fixing z-index of form

--- a/docs/styles/index.css
+++ b/docs/styles/index.css
@@ -81,7 +81,7 @@
 
 .modal {
     position: fixed; 
-    z-index: 2000;
+    z-index: 9998;
     left: 0;
     top: 0;
     width: 100%;
@@ -97,7 +97,7 @@
     border: 1px solid #888;
     width: 80%;
     max-width: 500px;
-    z-index: 2001;
+    z-index: 9999;
 }
 
 .close {
